added script.bat for windows, I still need to test this, and more env variables for more control

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,17 @@
+GN_ADMIN_USER=admin
+GN_ADMIN_PASSWORD=password
 MONGO_USER=user
 MONGO_PASSWORD=password
 MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DB=db-name
+MAILDEV_WEB_PORT=1080
+MAILDEV_SMTP_PORT=1025
+MAILDEV_INCOMING_USER=user
+MAILDEV_INCOMING_PASS=password
 # git variables to be used like this: git clone ${GIT_REPO}/${GIT_REPO_NAME}
 GIT_REPO=git@github.com:example/user
 GIT_REPO_NAME=your-repo-name # which is used in the git clone command and as the folder name
+GIT_WORKING_COMMIT=3d65bd034145c1a8cc668deef259c7c08ad89615
 GRANDNODE_PROJECT_PATH=GrandNode.sln
 GRANDNODE_WEB_PATH=path/to/Grand.Web
