moved dotnet project folder into ./solution, check, generate and trust https certificate if missing

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,14 @@
 /mongodb/dumps/*
 !/mongodb/mask/
 /mongodb/mask/*
+!/solution
+/solution/*
 
 # Handle file types
 !*.yml
 !*.sh
 !*.example
+*.bak
 *.archive
 *.env
 *.js
